# Durhack2024GameServer

./: Cargo.toml  build.rs
src/: gamestate.rs  icon_store.rs  main.rs  objects.rs  udp_server.rs
src/tcp_server/: mod.rs  player_manager.rs
